# hk26

./: .gitignore  README.md  pyproject.toml
docs/: kscale_data.md  python_setup_conda.md  python_setup_uv.md
hk26-MCS/CoMA9_envs/: 10km-CoMA9_India_MCS_envs.csv  10km-CoMA9_US_MCS_envs.csv  10km-CoMA9_WAf_MCS_envs.csv  5km-CoMA9_India_MCS_envs.csv  5km-CoMA9_US_MCS_envs.csv  5km-CoMA9_WAf_MCS_envs.csv  CoMA9_MCS_env_analysis.ipynb  comorph_mcs_envs.py  notebook_functions.py
hk26-MCS/entrainment/: .gitignore  README.md  analyse_entr.ipynb  calc_entrainment.py  calc_entrainment_wam.py  calc_mcs_entrainment.py  dc.ipynb  diurnal_cycle.py  models.py  plot_diurnal_cycle.py  plot_mcs_entrainment.py  submit.py
hk26-MCS/entrainment/docs/: technical_overview.md
hk26-TCs/: README.md  plot_landfalling_intensity.py  plot_tc_track.py  plot_trackdensity_landfallingrate.py  tc_helpers.py
notebooks/: 01_view_data.ipynb  01_view_global_data.ipynb  02_view_regional_data.ipynb  03_hovmoller.ipynb  04_circular_environment.ipynb  05_transect.ipynb  06_obs.ipynb  07_healpix_to_iris.ipynb  10_dataset_urls.ipynb  10_regional_healpix_to_iris.ipynb  11_healpix_resolution_demo.ipynb  UM_dataset_urls.md  clear_notebook_outputs.sh  demo_mcs_track_stats_healpix_UM_hk26.ipynb
notebooks/dev/: catalog_test.ipynb  kscale_view_glm.n2560_RAL3p3_tuned.ipynb  scratch_testing.ipynb  test_datasets.ipynb
python_envs/: hk26_env.yaml
