[project]
name = "hk26"
version = "0.1.0"
description = "Dependencies for UK km-scale hackathon 2026"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
    "cf-python>=3.20.0",
    "cfgrib>=0.9.15.1",
    "cfunits>=3.3.7",
    "cmocean>=4.0.3",
    "dask-jobqueue>=0.9.0",
    "dask[complete]>=2026.3.0",
    "distributed>=2026.3.0",
    "easygems>=0.1.5",
    "fastparquet>=2026.3.0",
    "flox>=0.11.2",
    "fsspec>=2026.3.0",
    "gribscan>=0.0.16",
    "h5netcdf>=1.8.1",
    "hdf5plugin>=6.0.0",
    "healpix>=2025.1",
    "healpy>=1.19.0",
    "hvplot>=0.12.2",
    "intake>=0.7,<2",
    "intake-esm>=2024.2.6",
    "intake-stac>=0.4.0",
    "intake-xarray>=0.7,<2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "odc-stac>=0.5.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pooch>=1.9.0",
    "pyflextrkr",
    "pystac>=1.14.3",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "rioxarray>=0.22.0",
    "ruff>=0.15.11",
    "s3fs>=2026.3.0",
    "scipy>=1.17.1",
    "scitools-iris>=3.15.0",
    "seaborn>=0.13.2",
    "sh>=2.2.2",
    "spectrum>=0.10.0",
    "tabulate>=0.10.0",
    "tobac>=1.6.2",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20260408",
    "uxarray>=2026.4.0",
    "xarray>=2026.4.0",
    "xgcm>=0.9.0",
    "zarr<3",
]

[tool.uv.sources]
pyflextrkr = { git = "https://github.com/FlexTRKR/PyFLEXTRKR.git", tag = "v2025.05.0" }

